update: fixed project image display error on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -348,14 +348,14 @@ section {
   /* width: max-content; */
   position: relative;
   width: 100%;
-  /* height: 100%; */
+  min-height: 500px;
   /* background-color: pink; */
 }
 
 .project {
   width: 12.5rem;
   height: 18.75rem;
-  background-position: 60% 20%;
+  background-position: 50% 15%;
   display: inline-block;
   background-size: cover;
   position: absolute;
@@ -371,11 +371,12 @@ section {
   top: 0;
   left: 50%;
   width: 90%;
+  min-height: 400px;
   height: 100%;
   transform: translate(-50%, 0);
-  /* transform: translate(0); */
   border-radius: 0;
   box-shadow: none;
+  aspect-ratio: 16/9;
 }
 .project:nth-child(3) {
   left: 60%;
@@ -705,5 +706,8 @@ footer ul li a {
     padding: 1.5rem;
     width: 300px;
     font-size: 1rem;
+  }
+  .tags span {
+    font-size: 0.5rem;
   }
 }
